--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^12.0.0",
     "axios": "^1.2.2",
+    "cldr-data": "^36.0.1",
     "dayjs": "^1.11.7",
+    "globalize": "^1.7.0",
+    "globalize-webpack-plugin": "^3.0.0",
     "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
+    "moment": "^2.29.4",
+    "react": "^17.0.0",
     "react-animations": "^1.0.0",
-    "react-dom": "^18.2.0",
+    "react-big-calendar": "^1.6.3",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
-    "source-map-loader": "^4.0.1",
+    "source-map-loader": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
