--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
+    "sass": "^1.58.0",
     "source-map-loader": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
