--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "@material-tailwind/react": "^1.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^12.0.0",
@@ -10,7 +12,6 @@
     "cldr-data": "^36.0.1",
     "dayjs": "^1.11.7",
     "globalize": "^1.7.0",
-    "globalize-webpack-plugin": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^17.0.0",
@@ -29,6 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
+  
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
