--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
-  
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +52,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
 }
