--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.0.0",
     "axios": "^1.2.2",
     "cldr-data": "^36.0.1",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "globalize": "^1.7.0",
     "jwt-decode": "^3.1.2",
@@ -24,6 +25,13 @@
     "sass": "^1.58.0",
     "source-map-loader": "^3.0.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7",
+    "tailwindcss-debug-screens": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,11 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7"
   }
 }
